gitops/applications/israheck-site/manifest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: israheck-site
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
